[gd_scene load_steps=6 format=3 uid="uid://cd05atimgf6u3"]

[ext_resource type="Script" path="res://Abilities/BossMoves/IcathianRain.gd" id="1_ivdhr"]
[ext_resource type="Script" path="res://Abilities/BossMoves/trail.gd" id="2_0mxce"]
[ext_resource type="Texture2D" uid="uid://dwu6nmx68uonm" path="res://Resources/abilities/enemy/icathian-rain-sprite.png" id="2_irbyj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_k3ykf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_irbyj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_75e07"]
offsets = PackedFloat32Array(0, 0.739336)
colors = PackedColorArray(1, 1, 1, 0.0784314, 0.243137, 0.0823529, 0.32549, 1)

[node name="BulletBody" type="Area2D"]
process_mode = 1
z_index = 10
collision_layer = 0
collision_mask = 5
script = ExtResource("1_ivdhr")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
polygon = PackedVector2Array(1, -3.61999e-06, 1.00003, 8, -0.999971, 8, -1, 3.61999e-06)

[node name="TimeoutTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-4, 0)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_k3ykf")

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Line2D" type="Line2D" parent="."]
top_level = true
points = PackedVector2Array(2, 3, 16, 15, 15, 21, 33, 19)
width = 1.0
gradient = SubResource("Gradient_75e07")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("2_0mxce")

[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
